--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ClimaTempo</string>
+    <string name="weather_icon_description">Ícone do clima</string>
 </resources>
